# stashii-searching

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
client/: client.py  main.py  run.sh
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: file.json  main.cpp
src/libfts/: CMakeLists.txt
src/libfts/libfts/: file.json  funct.cpp  funct.hpp  indexator.cpp  searcher.cpp  summ.cpp  summ.hpp  terms.cpp
src/miaufts/: CMakeLists.txt
src/miaufts/miaufts/: miaufts.cpp  miaufts.h  miaufts.hpp
src/tests/: CMakeLists.txt
src/tests/tests/: test.cpp
