set(target_name libfts)

add_library(${target_name} STATIC
    libfts/terms.cpp
    libfts/indexator.cpp
    libfts/searcher.cpp
    libfts/funct.hpp)



target_include_directories(
      ${target_name}
      PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}
        ${PROJECT_SOURCE_DIR}/external/PicoSHA2

    )

target_link_libraries(
    ${target_name}
    PRIVATE
      picosha2
    )
